Fixed search bar width on mobile

--- a/app/assets/stylesheets/franklin.css.scss
+++ b/app/assets/stylesheets/franklin.css.scss
@@ -585,7 +585,7 @@ h3.ongray {
 }
 
 #bento-search-navbar {
-  width: 700px;
+  max-width: 700px;
   margin-left: auto;
   margin-right: auto;
 }
